--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,8 @@
     "\n",
     "# Complete this function! \n",
     "def distance(a, b, c):\n",
-    "    for points in len\n",
+    "    for points in len(a):\n",
+    "        \n",
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
