--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "# Complete this function! \n",
     "def distance(a, b, c):\n",
-    "    a, b = np.as_a\n",
+    "    a, b = np.as_array()\n",
     "    for points in len(a):\n",
     "        np\n",
     "\n",
