--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,7 @@
     "import numpy as np\n",
     "\n",
     "# Complete this function! \n",
-    "def distance(a, b, c):\n",
+    "def distance(a, b, c=):\n",
     "    a, b = np.as_array()\n",
     "    for points in len(a):\n",
     "        np\n",
