Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,6 +60,7 @@
     "\n",
     "# Complete this function! \n",
     "def distance(a, b, c=2):\n",
+    "    sums = 0\n",
     "    a, b = np.as_array()\n",
     "    for points in len(a):\n",
     "        \n",
