--- a/index.ipynb
+++ b/index.ipynb
@@ -63,6 +63,7 @@
     "    sums = 0\n",
     "    a, b = np.as_array()\n",
     "    for points in len(a):\n",
+    "        sums += \n",
     "        \n",
     "\n",
     "test_point_1 = (1, 2)\n",
