--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,7 @@
     "    sums = 0\n",
     "    a, b = np.as_array()\n",
     "    for points in len(a):\n",
-    "        sums += \n",
+    "        sums += a-b\n",
     "        \n",
     "\n",
     "test_point_1 = (1, 2)\n",
