Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -64,6 +64,7 @@
     "    a, b = np.as_array()\n",
     "    for points in len(a):\n",
     "        sums += ((a-b)**c)**(1/c)\n",
+    "    return sums\n",
     "        \n",
     "\n",
     "test_point_1 = (1, 2)\n",
