Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,7 @@
     "# Complete this function! \n",
     "def distance(a, b, c=2):\n",
     "    sums = 0\n",
-    "    a =\n",
+    "    a = np.asarray(a)\n",
     "    for points in len(a):\n",
     "        sums += ((a-b)**c)**(1/c)\n",
     "    return sums\n",
