Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,7 @@
     "    a = np.asarray(a)\n",
     "    b = np.asarray(b)\n",
     "    for points in len(a):\n",
-    "        sums += (np.abs(a-b)**c)**(1/c)\n",
+    "        sums += (np.pnp.abs(a-b)**c)**(1/c)\n",
     "    return sums\n",
     "        \n",
     "test_point_1 = (1, 2)\n",
