Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,7 @@
     "    a = np.asarray(a)\n",
     "    b = np.asarray(b)\n",
     "    for points in len(a):\n",
-    "        sums += np.power(np.power(np.abs(a-b),c),(1/c)\n",
+    "        sums += np.power(np.power(np.abs(poin-b),c),(1/c)\n",
     "    return sums\n",
     "        \n",
     "test_point_1 = (1, 2)\n",
