--- a/index.ipynb
+++ b/index.ipynb
@@ -52,15 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-1170fe184227>, line 10)",
+     "evalue": "invalid syntax (<ipython-input-6-630384160e01>, line 10)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-1170fe184227>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    return sums\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-630384160e01>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    return sums\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -73,8 +73,7 @@
     "    a = np.asarray(a)\n",
     "    b = np.asarray(b)\n",
     "    for points in len(a):\n",
-    "        sums += np.power(np.power(np.abs(a[poi-b),c),(1/c)\n",
-    "    return sums\n",
+    "        sums += np.power(np.power(np.abs(a[points]-b[points]),c),(1/c)return sums\n",
     "        \n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
