Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
     "    sums = 0\n",
     "    a = np.asarray(a)\n",
     "    b = np.asarray(b)\n",
-    "    for points in len(a):\n",
+    "    for points in range(0,len(a):\n",
     "        sums += np.power(np.power(np.abs(a[points]-b[points]),c),(1/c))\n",
     "        return sums\n",
     "        \n",
