Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
     "    sums = 0\n",
     "    a = np.asarray(a)\n",
     "    b = np.asarray(b)\n",
-    "    for points in range(0,len(a)):\n",
+    "    for points in range(0,len(a)+1):\n",
     "        sums += np.power(np.power(np.abs(a[points]-b[points]),c),(1/c))\n",
     "        return sums\n",
     "        \n",
