Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,16 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.0\n",
-      "3.0\n",
-      "3.0\n"
+      "4.0\n",
+      "4.0\n",
+      "3.9999999999999996\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
     "    sums = 0\n",
     "    a = np.asarray(a)\n",
     "    b = np.asarray(b)\n",
-    "    for points in range(0,len(a)+1):\n",
+    "    for points in a:\n",
     "        sums += np.power(np.power(np.abs(a[points]-b[points]),c),(1/c))\n",
     "        return sums\n",
     "        \n",
