Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,7 @@
     "    a = np.asarray(a)\n",
     "    b = np.asarray(b)\n",
     "    for points in range(len(a)):\n",
-    "        sums += np.power(np.power(np.abs(a[points]-b[points]),c),(1/c))\n",
+    "        sums += np.power(np.power(np.abs(a[points]-b[points]),c),()\n",
     "        return sums\n",
     "        \n",
     "test_point_1 = (1, 2)\n",
