Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -74,8 +74,8 @@
     "    a = np.asarray(a)\n",
     "    b = np.asarray(b)\n",
     "    for points in range(len(a)):\n",
-    "        sums += np.power(np.power(np.abs(a[points]-b[points]),c),()\n",
-    "        return sums\n",
+    "        sums += np.power(np.abs(a[points]-b[points]),c)\n",
+    "        return np.power(sums, (1/c))\n",
     "        \n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
