Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   # Expected Output: 17.939899665271266"
+    "   # Expected Output: 17.939899665271266\n",
+    "    \n",
+    "    point_1 = (-2, -3)"
    ]
   },
   {
