--- a/index.ipynb
+++ b/index.ipynb
@@ -124,7 +124,9 @@
    "source": [
     "   # Expected Output: 17.939899665271266\n",
     "    \n",
-    "    point_1 = (-2, -3)"
+    "    point_1 = (-2, -3.4, 4, 15, 7)\n",
+    "    point_2 = (3,-1.2, -2, -1, 7)\n",
+    "    print(distance())"
    ]
   },
   {
