Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,15 +118,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating Euclidean Distance:\n",
+      "17.939899665271266\n"
+     ]
+    }
+   ],
    "source": [
     "   # Expected Output: 17.939899665271266\n",
     "    \n",
-    "    point_1 = (-2, -3.4, 4, 15, 7)\n",
-    "    point_2 = (3,-1.2, -2, -1, 7)\n",
-    "    print(distance())"
+    "point_1 = (-2, -3.4, 4, 15, 7)\n",
+    "point_2 = (3,-1.2, -2, -1, 7)\n",
+    "print(distance(point_1, point_2))"
    ]
   },
   {
