Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,12 +152,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating Euclidean Distance:\n",
+      "8.12403840463596\n"
+     ]
+    }
+   ],
    "source": [
     "Point_1 =[0, 0, 0, 7, 16, 2, 0, 1, 2, 1]\n",
-    "Point_2 =[1, -1, 5, 7, 14, 3, -2, 3, 3, 6]  \n",
+    "Point_2 =[1, -1, 5, 7, 14, 3, -2, 3, 3, 6] \n",
+    "print(distance(Point_1, Point_2))\n",
     "    # Expected Output: 20"
    ]
   },
